--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,4 @@
 spring.application.name=tech-challenge
-spring.datasource.url=jdbc:postgresql://postgres:5432/galega_burguer
+spring.datasource.url=jdbc:postgresql://localhost:5432/galega_burguer
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER-CLASS-NAME}
-mercadopago.access.key=${MERCADOPAGO_ACCESS_KEY}
-mercadopago.public.key=${MERCADOPAGO_PUBLIC_KEY}
