--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -33,6 +33,9 @@ jobs:
           distribution: 'adopt'
           java-version: '21'
 
+      - name: Grant execute permission for Gradle wrapper
+        run: chmod +x ./gradlew   # This fixes the permission issue
+
       - name: Cache Gradle dependencies
         uses: actions/cache@v3
         with:
