--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -13,10 +13,28 @@ jobs:
     runs-on: ubuntu-latest
 
     services:
+      postgres:
+        image: postgres:latest
+        ports:
+          - 5432:5432
+        env:
+          POSTGRES_DB: galega_burguer  # Database for your application
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+        options: >-
+          --health-cmd="pg_isready -U postgres"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+
       sonarqube:
-        image: sonarqube:9.9-community  # Specify a stable version
+        image: sonarqube:9.9-community
         ports:
           - 9000:9000
+        env:
+          SONAR_JDBC_URL: jdbc:postgresql://postgres:5432/sonar  # Database for SonarQube
+          SONAR_JDBC_USERNAME: postgres
+          SONAR_JDBC_PASSWORD: postgres
         options: >-
           --health-cmd="curl --fail http://localhost:9000 || exit 1"
           --health-interval=10s
@@ -57,7 +75,7 @@ jobs:
             echo "SonarQube is not ready yet. Waiting for 10 seconds..."
             sleep 10
             count=$((count+1))
-            if [ $count -ge 60 ]; then  # Increase wait time to 10 minutes
+            if [ $count -ge 60 ]; then
               echo "SonarQube did not become ready in time. Exiting."
               exit 1
             fi
@@ -67,7 +85,7 @@ jobs:
       - name: Check SonarQube Logs
         run: |
           echo "Checking SonarQube logs..."
-          docker ps  # List running containers to find SonarQube's container ID
+          docker ps
           docker logs $(docker ps -q -f ancestor=sonarqube:9.9-community) || echo "No logs available"
 
       - name: Run SonarQube Scan
