--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -1,94 +1,38 @@
-name: SonarQube Scan
+name: CI
 
 on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
-  sonarQube:
+  sonarqube:
     runs-on: ubuntu-latest
 
     services:
-      postgres:
-        image: postgres:latest
-        ports:
-          - 5432:5432
-        env:
-          POSTGRES_DB: galega_burguer  # Database for your application
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-        options: >-
-          --health-cmd="pg_isready -U postgres"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=5
-
       sonarqube:
         image: sonarqube:9.9-community
         ports:
           - 9000:9000
         env:
-          SONAR_JDBC_URL: jdbc:postgresql://postgres:5432/sonar  # Database for SonarQube
-          SONAR_JDBC_USERNAME: postgres
-          SONAR_JDBC_PASSWORD: postgres
+          SONAR_JDBC_URL: jdbc:h2:mem:sonar;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+          SONAR_JDBC_USERNAME: sa
+          SONAR_JDBC_PASSWORD: ""
         options: >-
-          --health-cmd="curl --fail http://localhost:9000 || exit 1"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=10
-          --memory=2g
-          --cpus=2
+          --health-cmd="curl -f http://localhost:9000/api/system/status || exit 1"
+          --health-interval=5s
+          --health-timeout=2s
+          --health-retries=5
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
-      - name: Set up JDK 21
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'adopt'
-          java-version: '21'
+      - name: Build with Gradle
+        run: ./gradlew build -x test --no-daemon
 
-      - name: Grant execute permission for Gradle wrapper
-        run: chmod +x ./gradlew
-
-      - name: Cache Gradle dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-
-      - name: Build with Gradle (Skip Tests)
-        run: ./gradlew build -x test
-
-      - name: Wait for SonarQube to be Ready
-        run: |
-          echo "Waiting for SonarQube to be ready..."
-          count=0
-          until curl -s http://localhost:9000 | grep "Welcome to SonarQube"; do
-            echo "SonarQube is not ready yet. Waiting for 10 seconds..."
-            sleep 10
-            count=$((count+1))
-            if [ $count -ge 60 ]; then
-              echo "SonarQube did not become ready in time. Exiting."
-              exit 1
-            fi
-          done
-          echo "SonarQube is ready!"
-
-      - name: Check SonarQube Logs
-        run: |
-          echo "Checking SonarQube logs..."
-          docker ps
-          docker logs $(docker ps -q -f ancestor=sonarqube:9.9-community) || echo "No logs available"
-
-      - name: Run SonarQube Scan
+      - name: SonarQube Scan
         env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./gradlew sonarqube -x test
+        run: ./gradlew sonarqube -Dsonar.projectKey=your_project_key -Dsonar.host.url=http://
