--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -1,38 +1,61 @@
-name: CI
+name: SonarQube Analysis
 
 on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  sonarqube:
+  sonar:
+    name: SonarQube Scan
     runs-on: ubuntu-latest
 
     services:
       sonarqube:
-        image: sonarqube:9.9-community
+        image: sonarqube:latest
         ports:
           - 9000:9000
-        env:
-          SONAR_JDBC_URL: jdbc:h2:mem:sonar;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-          SONAR_JDBC_USERNAME: sa
-          SONAR_JDBC_PASSWORD: ""
         options: >-
-          --health-cmd="curl -f http://localhost:9000/api/system/status || exit 1"
-          --health-interval=5s
-          --health-timeout=2s
+          --health-cmd="curl -f http://localhost:9000/api/system/health || exit 1"
+          --health-interval=30s
+          --health-timeout=10s
           --health-retries=5
+        env:
+          SONAR_JDBC_URL: jdbc:postgresql://localhost:5432/galega_burguer
+          SONAR_JDBC_USERNAME: postgres
+          SONAR_JDBC_PASSWORD: postgres
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Set up JDK
+        uses: actions/setup-java@v2
+        with:
+          java-version: '21'
+
+      - name: Cache Gradle packages
+        uses: actions/cache@v2
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
       - name: Build with Gradle
-        run: ./gradlew build -x test --no-daemon
+        run: ./gradlew build -x test  # Skip tests during build
+
+      - name: Wait for SonarQube to be ready
+        run: |
+          until curl -s http://localhost:9000/api/system/health | grep '"status":"OK"'; do
+            echo "Waiting for SonarQube to be ready..."
+            sleep 5
+          done
 
       - name: SonarQube Scan
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./gradlew sonarqube -Dsonar.projectKey=your_project_key -Dsonar.host.url=http://
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}  # Add your SonarQube token to GitHub secrets
+        run: ./gradlew sonarqube -Dsonar.projectKey=your_project_key -Dsonar.host.url=http://localhost:9000 -Dsonar.login=$SONAR_TOKEN
