--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -14,6 +14,20 @@ jobs:
     runs-on: ubuntu-latest
 
     services:
+      postgres:
+        image: postgres:latest
+        ports:
+          - 5432:5432
+        env:
+          POSTGRES_DB: galega_burguer
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+        options: >-
+          --health-cmd="pg_isready -U postgres"
+          --health-interval=30s
+          --health-timeout=10s
+          --health-retries=5
+
       sonarqube:
         image: sonarqube:latest
         ports:
@@ -47,6 +61,13 @@ jobs:
 
       - name: Build with Gradle
         run: ./gradlew build -x test  # Skip tests during build
+
+      - name: Wait for PostgreSQL to be ready
+        run: |
+          until pg_isready -h localhost -p 5432 -U postgres; do
+            echo "Waiting for PostgreSQL to be ready..."
+            sleep 5
+          done
 
       - name: Wait for SonarQube to be ready
         run: |
