--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.3'
 	implementation 'org.flywaydb:flyway-core'
-	implementation 'com.mercadopago:sdk-java:2.1.24'
+	implementation 'software.amazon.awssdk:sqs:2.20.58'
+	implementation 'software.amazon.awssdk:sts:2.20.58'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
