--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=tech-challenge
+spring.application.name=order
 spring.datasource.url=jdbc:postgresql://localhost:5432/galega_burguer
 spring.datasource.username=postgres
 spring.datasource.password=postgres
@@ -6,7 +6,3 @@ spring.datasource.password=postgres
 aws.region=us-east-1
 aws.sns.topicArn=arn:aws:sns:us-east-1:985353326468:teste
 aws.sqs.queueUrl=https://sqs.us-east-1.amazonaws.com/985353326468/teste
-
-aws.accessKeyId=${AWS_ACCESS_KEY_ID}
-aws.secretKey=${AWS_SECRET_ACCESS_KEY}
-aws.sessionToken=${AWS_SESSION_TOKEN}
