Subscrevendo ao SNS usando SQS

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,8 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 
 aws.region=us-east-1
-aws.snsTopicArn=arn:aws:sns:us-east-1:985353326468:teste
 aws.sqsQueueUrl=https://sqs.us-east-1.amazonaws.com/985353326468/teste
-
+aqs.sqsOutputQueueUrl=
 aws.accessKeyId=
 aws.secretKey=
 aws.sessionToken=
