--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 spring.application.name=order
-spring.datasource.url=jdbc:postgresql://localhost:5432/galega_burguer
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-
+spring.datasource.url=${SPRING_DATASOURCE_URL}
 aws.region=us-east-1
-aws.sqsQueueUrl=https://sqs.us-east-1.amazonaws.com/985353326468/teste
-aqs.sqsOutputQueueUrl=
-aws.accessKeyId=
-aws.secretKey=
-aws.sessionToken=
+
+#Fila onde as mensagens serão publicadas
+aws.sqsOutputQueueUrl=${AWS_SQS_OUTPUT_QUEUE_URL}
+
+#Fila que escuta o SNS
+aws.sqsInputQueueUrl=${AWS_SQS_INPUT_QUEUE_URL}
+
+aws.accessKeyId=${AWS_ACCESS_KEY_ID}
+aws.secretKey=${AWS_SECRET_ACCESS_KEY}
+aws.sessionToken=${AWS_SESSION_TOKEN}
