--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -37,4 +37,4 @@ jobs:
           SPRING_DATASOURCE_USERNAME: ${{ secrets.DB_USER }}
           SPRING_DATASOURCE_PASSWORD: ${{ secrets.DB_PASSWORD }}
         run: |
-          java -jar build/libs/order.jar
+          java -jar build/libs/order-0.0.1-SNAPSHOT.jar
