--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -36,5 +36,5 @@ jobs:
           SPRING_DATASOURCE_URL: jdbc:postgresql://${{ secrets.DB_HOST }}:5432/galega_burguer
           SPRING_DATASOURCE_USERNAME: ${{ secrets.DB_USER }}
           SPRING_DATASOURCE_PASSWORD: ${{ secrets.DB_PASSWORD }}
-        run: |
-          java -jar build/libs/order-0.0.1-SNAPSHOT.jar
+        # run: |
+          # java -jar build/libs/order-0.0.1-SNAPSHOT.jar
