--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,7 @@ sonarqube {
 		property "sonar.projectKey", "speltriao_tech-challenge-fiap-ms-pedido"
 		property "sonar.organization", "speltriao"
 		property "sonar.login", System.getenv("SONAR_TOKEN")
-		property "sonar.exclusions", "**/*DTO.java,**/*Builder.java,**/*Mapper.java,**/*Config.java,**/*Constants.java,**/*Exception.java"
+		property "sonar.exclusions", "**/*DTO.java,**/*Builder.java,**/*Mapper.java,**/*Config.java,**/*Constants.java,**/*Exception.java,**/*Configuration.java"
 	}
 }
 
@@ -80,7 +80,8 @@ jacocoTestReport {
 							exclude '**/*Mapper.class'
 							exclude '**/*Config.class'
 							exclude '**/*Constants.class'
-							exclude '**/*Exception.java'
+							exclude '**/*Exception.class'
+							exclude '**/*Configuration.class'
 						}
 			})
 	)
