SPRING_DATASOURCE_URL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=order
 aws.region=us-east-1
-
+spring.datasource.url=${SPRING_DATASOURCE_URL}
 #Fila onde as mensagens serão publicadas
 aws.sqsOutputQueueUrl=${AWS_SQS_OUTPUT_QUEUE_URL}
 
