--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     image: postgres:15-alpine
     container_name: postgres-db
     environment:
-      POSTGRES_DB: galega_burguer
+      POSTGRES_DB: galega
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     ports:
