--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=order
+server.port=6666
 aws.region=us-east-1
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 #Fila onde as mensagens serão publicadas
