--- a/src/main/resources/deployment/app-deploy.yaml
+++ b/src/main/resources/deployment/app-deploy.yaml
@@ -35,7 +35,7 @@ spec:
     spec:
       containers:
         - name: spring-rest-api
-          image: 793862496606.dkr.ecr.us-east-1.amazonaws.com/tech-challenge-fiap:latest
+          image: 793862496606.dkr.ecr.us-east-1.amazonaws.com/tech-challenge-fiap-ms-pedido:latest
           ports:
             - containerPort: 8080
 
