--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   server:
     port: 6666
   application:
-    name: tech-challenge-fiap-ms-pedido
+    name: galega-ms-order-app
   datasource:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://postgres:5432/galega
