Base EKS config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,4 @@
-spring.application.name=order
+spring.application.name=galega-ms-order
 server.port=6666
 aws.region=us-east-1
 spring.datasource.url=${SPRING_DATASOURCE_URL}
-#Fila onde as mensagens serão publicadas
-aws.sqsOutputQueueUrl=${AWS_SQS_OUTPUT_QUEUE_URL}
-
-#Fila que escuta o SNS
-aws.sqsInputQueueUrl=${AWS_SQS_INPUT_QUEUE_URL}
-
-aws.accessKeyId=${AWS_ACCESS_KEY_ID}
-aws.secretKey=${AWS_SECRET_ACCESS_KEY}
-aws.sessionToken=${AWS_SESSION_TOKEN}
