Base EKS config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=galega-ms-order
 server.port=6666
 aws.region=us-east-1
-spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.url=galega-ms-order
