--- a/.github/workflows/deploy-eks.yaml
+++ b/.github/workflows/deploy-eks.yaml
@@ -17,7 +17,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
           aws-region: ${{ secrets.AWS_REGION }}
 
@@ -46,8 +46,8 @@ jobs:
           envsubst < src/main/resources/deployment/app-configmap.yaml > configmap.yaml
         env:
           AWS_REGION: ${{ secrets.AWS_REGION }}
-          AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_KEY: ${{ secrets.AWS_ACCESS_KEY }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
           AWS_SQS_OUTPUT_QUEUE_URL: ${{ secrets.AWS_SQS_OUTPUT_QUEUE_URL }}
           AWS_SQS_INPUT_QUEUE_URL: ${{ secrets.AWS_SQS_INPUT_QUEUE_URL }}
@@ -77,8 +77,8 @@ jobs:
           kubectl set image deployment/galega-ms-order galega-ms-order=${{ steps.login-ecr.outputs.registry }}/galega-ms-order-app:latest
     env:
       AWS_REGION: ${{ secrets.AWS_REGION }}
-      AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_KEY: ${{ secrets.AWS_ACCESS_KEY }}
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
       AWS_SQS_OUTPUT_QUEUE_URL: ${{ secrets.AWS_SQS_OUTPUT_QUEUE_URL }}
       AWS_SQS_INPUT_QUEUE_URL: ${{ secrets.AWS_SQS_INPUT_QUEUE_URL }}
