--- a/src/main/resources/deployment/app-configmap.yaml
+++ b/src/main/resources/deployment/app-configmap.yaml
@@ -11,3 +11,4 @@ data:
   AWS_SESSION_TOKEN: "${AWS_SESSION_TOKEN}"
   AWS_SQS_INPUT_QUEUE_URL: "${AWS_SQS_INPUT_QUEUE_URL}"
   AWS_SQS_OUTPUT_QUEUE_URL: "${AWS_SQS_OUTPUT_QUEUE_URL}"
+  SPRING_DATASOURCE_URL: "${DB_URL}"
