--- a/src/main/resources/deployment/app-configmap.yaml
+++ b/src/main/resources/deployment/app-configmap.yaml
@@ -12,3 +12,4 @@ data:
   AWS_SQS_INPUT_QUEUE_URL: "${AWS_SQS_INPUT_QUEUE_URL}"
   AWS_SQS_OUTPUT_QUEUE_URL: "${AWS_SQS_OUTPUT_QUEUE_URL}"
   SPRING_DATASOURCE_URL: "${DB_URL}"
+  DB_HOST: "${DB_HOST}"
