--- a/src/main/resources/deployment/app-configmap.yaml
+++ b/src/main/resources/deployment/app-configmap.yaml
@@ -13,3 +13,5 @@ data:
   AWS_SQS_OUTPUT_QUEUE_URL: "${AWS_SQS_OUTPUT_QUEUE_URL}"
   SPRING_DATASOURCE_URL: "${DB_URL}"
   DB_HOST: "${DB_HOST}"
+  DB_USER: "${DB_USER}"
+  DB_PASSWORD: "{$DB_PASSWORD}"
