--- a/.github/workflows/deploy-eks.yaml
+++ b/.github/workflows/deploy-eks.yaml
@@ -86,5 +86,6 @@ jobs:
       SERVER_PORT: ${{ secrets.SERVER_PORT }}
       DB_HOST: ${{ secrets.DB_HOST }}
       DB_USER: ${{ secrets.DB_USER }}
+      SPRING_DATASOURCE_URL: ${{ secrets.DB_URL }}
       DB_URL: ${{ secrets.DB_URL  }}
       DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
