--- a/src/main/resources/deployment/app-configmap.yaml
+++ b/src/main/resources/deployment/app-configmap.yaml
@@ -14,4 +14,4 @@ data:
   SPRING_DATASOURCE_URL: "${DB_URL}"
   DB_HOST: "${DB_HOST}"
   DB_USER: "${DB_USER}"
-  DB_PASSWORD: "{$DB_PASSWORD}"
+  DB_PASSWORD: "${DB_PASSWORD}"
